fixes bug 162448 "Page takes loooong to load with pipelining enabled [IIS/5.0]" r=gagan sr=bzbarsky